Removed large images that were causing compile error.

--- a/app/src/main/res/layout/custom_info.xml
+++ b/app/src/main/res/layout/custom_info.xml
@@ -14,8 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:src="@drawable/pano_20170412_133510" />
+            android:adjustViewBounds="true" />
 
         <TextView
             android:id="@+id/title"
