--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -26,8 +26,11 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="54dp"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_dialog_info"
+        app:backgroundTint="#ff9999"/>
 
 </android.support.design.widget.CoordinatorLayout>
