--- a/app/src/main/res/layout/custom_info.xml
+++ b/app/src/main/res/layout/custom_info.xml
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/custom_image"
-            android:contentDescription="Photo by J. Hess, 2017"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:src="@drawable/pano_20170412_133510"/>
+    <ImageView
+        android:id="@+id/custom_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:contentDescription="Photo by J. Hess, 2017"
+        android:scaleType="fitCenter"
+        android:src="@drawable/pano_20170412_133510" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            tools:text="Mahaiula Bay, Kaleaoa"
-            tools:textSize="24sp" />
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="8dp"
+        tools:text="Mahaiula Bay, Kaleaoa"
+        tools:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/snippet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="4dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="8dp"
-            tools:text="A rocky drive and ~15 minute walk reveals sandy beaches with few others around."
-            tools:textSize="18sp" />
+    <TextView
+        android:id="@+id/snippet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="4dp"
+        tools:text="A rocky drive and ~15 minute walk reveals sandy beaches with few others around."
+        tools:textSize="18sp" />
 
 </LinearLayout>
