--- a/app/src/main/res/layout/custom_info.xml
+++ b/app/src/main/res/layout/custom_info.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
+        android:paddingTop="4dp"
         android:contentDescription="Photo by J. Hess, 2017"
         android:scaleType="fitCenter"
         android:src="@drawable/pano_20170412_133510" />
