--- a/app/src/main/res/layout/custom_info.xml
+++ b/app/src/main/res/layout/custom_info.xml
@@ -11,9 +11,8 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:paddingTop="4dp"
-        android:contentDescription="Photo by J. Hess, 2017"
         android:scaleType="fitCenter"
-        android:src="@drawable/pano_20170412_133510" />
+        tools:src="@drawable/pano_20170412_133510" />
 
     <TextView
         android:id="@+id/title"
@@ -33,7 +32,6 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="4dp"
-        tools:text="A rocky drive and ~15 minute walk reveals sandy beaches with few others around."
+        tools:text="Photo by J. Hess, April 2017"
         tools:textSize="18sp" />
-
 </LinearLayout>
