--- a/app/src/main/res/layout/custom_info.xml
+++ b/app/src/main/res/layout/custom_info.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/custom_image"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:adjustViewBounds="false"
         android:paddingTop="4dp"
-        android:scaleType="fitCenter"
-        tools:src="@drawable/pano_20170412_133510" />
+        android:scaleType="centerCrop"
+        tools:src="@drawable/saknsave_poke_counter" />
 
     <TextView
         android:id="@+id/title"
