--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="image_aspect_long">400dp</dimen>
+    <dimen name="image_aspect_short">300dp</dimen>
+    <dimen name="image_pano_aspect_long">980dp</dimen>
+    <dimen name="image_pano_aspect_short">300dp</dimen>
 </resources>
