Encode strings and dimensions. Clean up code.

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -27,10 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="54dp"
         android:layout_margin="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/app_bar_fab_margin_bottom"
+        app:backgroundTint="@color/colorPrimary"
         app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_dialog_info"
-        app:backgroundTint="#ff9999"/>
+        app:srcCompat="@android:drawable/ic_dialog_info" />
 
 </android.support.design.widget.CoordinatorLayout>
