--- a/app/src/main/res/layout/custom_info.xml
+++ b/app/src/main/res/layout/custom_info.xml
@@ -7,31 +7,31 @@
 
     <ImageView
         android:id="@+id/custom_image"
-        android:layout_width="300dp"
+        android:layout_width="@dimen/custom_info_window_iv_width"
         android:layout_height="wrap_content"
         android:adjustViewBounds="false"
-        android:paddingTop="4dp"
+        android:paddingTop="@dimen/custom_info_window_padding_top"
         android:scaleType="centerCrop"
-        tools:src="@drawable/saknsave_poke_counter" />
+        tools:src="@drawable/pano_beach" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="8dp"
-        tools:text="Mahaiula Bay, Kaleaoa"
-        tools:textSize="24sp" />
+        android:paddingLeft="@dimen/custom_info_window_text_left_right_padding"
+        android:paddingRight="@dimen/custom_info_window_text_left_right_padding"
+        android:paddingTop="@dimen/custom_info_window_padding_bottom"
+        tools:text="@string/tools_beach_text"
+        tools:textSize="@dimen/tools_custom_text_size_title" />
 
     <TextView
         android:id="@+id/snippet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="4dp"
-        tools:text="Photo by J. Hess, April 2017"
-        tools:textSize="18sp" />
+        android:paddingBottom="@dimen/custom_info_window_padding_bottom"
+        android:paddingLeft="@dimen/custom_info_window_text_left_right_padding"
+        android:paddingRight="@dimen/custom_info_window_text_left_right_padding"
+        android:paddingTop="@dimen/custom_info_window_padding_top"
+        tools:text="@string/tools_beach_photo_text"
+        tools:textSize="@dimen/tools_custom_text_size_snippet" />
 </LinearLayout>
